@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -22,12 +21,12 @@ public class CharacterImportanceService {
     return characterImportanceRepository.findByIsDeletedFalse()
         .stream()
         .map(CharacterImportanceFactory::toDTO)
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  public CharacterImportanceDto loadCharacterImportance(Integer id) throws FindDataException {
+  public CharacterImportanceDto loadCharacterImportance(Long id) throws FindDataException {
     Optional<CharacterImportance> characterImportance = characterImportanceRepository.findById(id);
-    return CharacterImportanceFactory.toDTO(characterImportance.orElseThrow(() -> new FindDataException(
+    return CharacterImportanceFactory.toDTO(characterImportance.orElseThrow(() -> new FindDataException(id,
         String.format("Could not find Character Importance with id:%d.", id))));
   }
 
@@ -36,10 +35,10 @@ public class CharacterImportanceService {
     return CharacterImportanceFactory.toDTO(characterImportanceRepository.save(characterImportance));
   }
 
-  public void delete(Integer id) throws FindDataException {
+  public void delete(Long id) throws FindDataException {
     Optional<CharacterImportance> characterImportance = characterImportanceRepository.findById(id);
     characterImportanceRepository.delete(characterImportance.orElseThrow(
-        () -> new FindDataException(String.format("Could not find Character Importance with id:%d, to delete.", id))));
+        () -> new FindDataException(id, String.format("Could not find Character Importance with id:%d, to delete.", id))));
   }
 
 }
